# PrivacyMagic-development

./: CMakeLists.txt  README.md  README_CN.md  main.cpp
CryptoTools/: BF.hpp  PRNG.hpp  PRP_AES.hpp
HashTools/: CuckooHash.hpp  HashCommon.hpp  SHA256.hpp  SimpleHash.hpp
HashTools/Hash_To_Table/: CuckooHash.hpp  HashCommon.hpp  SimpleHash.hpp
OPRFTools/: CMakeLists.txt  PRF_AES.cpp  PRF_AES.h
OPRFTools/DH/: DH_Receiver.hpp  DH_Sender.hpp  common.h
SocketTools/: Client_Sender.hpp  Server_Receiver.hpp
cmake/: Findlibdivide.cmake
logo/: PrintLogo.cpp  PrintLogo.h
test_demo/: CMakeLists.txt  HashDemo.cpp  HashDemo.h  PRFDemo.cpp  PRFDemo.h  PRPDemo.cpp  PRPDemo.h
